<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".ui.CommentFragment">

    <TextView
        android:id="@+id/txt_no_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_comments"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/comment_item">


    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="16dp"
        android:hint="Comentario" />

    <EditText
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="16dp"
        android:hint="Rating" />

    <Button
        android:id="@+id/botonAgregarComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="Agregar Comentario"
        />

</LinearLayout>