...
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:text="Agregar track"
            android:onClick="onAgregarTrackButtonClick"
            />
        <Button
            android:id="@+id/botonCometarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:text="Comentarios"
            />
    </FrameLayout>
</layout>
